Add(commands): make embed field titles more attractive
yes, this means putting emojis into them
honestly it does look nicer even though I don't really
like emojis that much.

Signed-off-by: kodehawa <david.alejandro.rubio@gmail.com>